try to make sure the download link is visible

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -242,6 +242,8 @@ video {
   width: 100%    !important;
   height: auto   !important;
 }
-
+#download {
+  margin-top: 600px;
+}
 
 
